[metadata]
name = pypermod
version = 0.2.0
author = Fabian Weigend
author_email = fabian.weigend@westernsydney.edu.au
description = A comprehensive performance modeling package including various tools to predict energy dynamics of athletes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faweigend/pypermod
project_urls =
    Bug Tracker = https://github.com/faweigend/pypermod/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    scipy
    numpy
    threecomphyd

[options.packages.find]
where = src